# talyn

./: .gitignore  .hgtags  AGENTS.md  BUGS-VERIFIED.md  LICENSE.md  MANIFEST.in  README.md  TODO.md  benchmark.py  build.zig  build.zig.zon  pyproject.toml  setup.py
benchmarks/: __init__.py  chat.py  event_fiesta_factory.py  food_delivery.py  producer_consumer.py  socket_ops.py  subprocess_bench.py  task_spawn.py  task_workflow.py  tcp_echo.py  udp_pingpong.py  unix_echo.py
docs/: BUGS.md  architectural-mandates.md  audits-and-profiling.md  benchmarks-566-3.14.txt  benchmarks-v0.5.0-3.14.txt  development-journey.md  hardening.md  index.md  lessons-learned.md  log.md  reference-and-misc.md  talyn-migration.md  talyn-naming.md  todo.md
leviathan/: __init__.py  loop.py
scratch/: verify_19_3.py
scripts/: build.sh  code-format.sh  lint-check-and-fix.sh  memcheck.sh  monitor_io_uring_cves.py  publish.sh  test_all.sh  type-check.sh
src/: callback_manager.zig  handle.zig  lib.zig  python_c.zig  timer_handle.zig
talyn/: __init__.py  future.py  loop.py  runner.py  server.py  talyn_zig.pyi  task.py
tests/: test_buffer_fallback.py  test_child.py  test_connection_memory_safety.py  test_create_connection.py  test_create_server.py  test_datagram.py  test_debug.py  test_fork.py  test_fs.py  test_future.py  test_future_edge.py  test_getaddrinfo.py  test_hooks.py  test_loop_internals.py  test_lru.py  test_module_cleanup.py  test_policy.py  test_pseudosocket.py  test_runner.py  test_runner_edge.py  test_server_edge.py  test_server_multi.py  test_sock.py  test_socket_ops.py  (+7 more)
(+142 files in other folders)
