[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talyn"
version = "0.5.0"
description = "Talyn: A robust, stable, and realistically fast Zig-powered event loop for Python's asyncio."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "Chaiwat Suttipongsakul", email = "cwt@bashell.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
benchmark = [
    "uvloop",
    "prettytable",
    "matplotlib",
    "pillow",
]

[project.urls]
Homepage = "https://github.com/cwt/talyn"
Repository = "https://github.com/cwt/talyn"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["tests", "zig-out", "src", "scratch", "docs"]
include = ["talyn", "talyn.*"]

[tool.setuptools.package-data]
talyn = ["talyn_zig*.so", "*.pyi"]
